Fix: Hamburger menu animation
Hamburger menu looked cropped so I fixed the css file for it

Added red to the footer element as well

--- a/lms_app/app/Components/hamburgerMenu.module.css
+++ b/lms_app/app/Components/hamburgerMenu.module.css
@@ -15,12 +15,12 @@
   .bar, .barOpen {
     width: 100%;
     height: 4px;
-    background-color: #333;
+    background-color: #e3dcdc;
     transition: all 0.3s ease;
   }
  
   .barOpen:nth-child(1) {
-    transform: rotate(45deg) translate(5px, 5px);
+    transform: rotate(45deg) translate(5px, 3px);
   }
  
   .barOpen:nth-child(2) {
@@ -28,7 +28,7 @@
   }
  
   .barOpen:nth-child(3) {
-    transform: rotate(-45deg) translate(5px, -5px);
+    transform: rotate(-47deg) translate(11px, -9px);
   }
  
   .menu {
